@@ -15,10 +15,34 @@ if ($object->xpdo) {
 			}
 
 			// Initialize SMF
+			/** @var MODX_SMF $MODX_SMF */
 			$MODX_SMF = $modx->getService('modx_smf', 'MODX_SMF', MODX_CORE_PATH . 'components/smf/model/');
 			break;
 
 		case xPDOTransport::ACTION_UNINSTALL:
+			/** @var MODX_SMF $MODX_SMF */
+			if ($MODX_SMF = $modx->getService('modx_smf', 'MODX_SMF', MODX_CORE_PATH . 'components/smf/model/')) {
+				$modx->log(xPDO::LOG_LEVEL_INFO, 'Removing hooks from SMF');
+				$MODX_SMF->smfRemoveHooks();
+			}
+			$path = MODX_CORE_PATH . 'components/smf';
+			$modx->log(xPDO::LOG_LEVEL_INFO, 'Removing files in file resolver: ' . $path);
+
+			$cacheManager = $modx->getCacheManager();
+			if ($cacheManager && file_exists($path)) {
+				if (is_dir($path) && $cacheManager->deleteTree($path, array_merge(array('deleteTop' => true, 'skipDirs' => false, 'extensions' => array()), $options))) {
+					$resolved = true;
+				}
+				elseif (is_file($path) && unlink($path)) {
+					$resolved = true;
+				}
+				else {
+					$modx->log(xPDO::LOG_LEVEL_ERROR, 'Could not remove files from path: ' . $path);
+				}
+			}
+			else {
+				$modx->log(xPDO::LOG_LEVEL_ERROR, 'Could not find files to remove.');
+			}
 			break;
 	}
 }
