@@ -2,8 +2,9 @@ Changelog for MODX-SMF.
 
 1.0.0-rc
 ==============
-- Improved logic of system setting "smf_forced_sync".
 - More detailed error log when received empty username for create.
+- Added public functions for adding and removing SMF integration hooks.
+- SMF hooks are removed on package uninstall.
 
 1.0.0-beta
 ==============
